kubernetes/apps/spring-dev/gateway/app/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-dev-gateway-metrics
spec:
  selector:
    app: spring-dev-gateway
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
