kubernetes/apps/spring-dev/gateway/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-dev-gateway-ingress
  namespace: spring-dev
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  ingressClassName: internal-nginx
  rules:
    - host: spring-dev-gateway.frey.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-dev-gateway
                port:
                  number: 80
